--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,32 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 1
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col *ngFor="let hotel of hotels" size="12" size-lg="6" size-xl="4">
+        <ion-card>
+          <img src={{hotel.urlImg}} alt="">
+          <ion-card-header>
+            <ion-card-subtitle>{{hotel.city}}</ion-card-subtitle>
+            <ion-card-title>{{hotel.address}}</ion-card-title>
+          </ion-card-header>
+        
+          <ion-card-content>
+            {{hotel.description}}
+            <ion-grid >
+              <ion-row>
+                <ion-col size="6" offset="6">
+                  <ion-button (click)="showRooms(hotel.rooms)" expand="block"  shape="round">
+                    Reservar
+                  </ion-button>
+                </ion-col>
+              </ion-row>
+            </ion-grid>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  
 </ion-content>
