feat(Checkout): dismiss modal in phones

--- a/src/app/pages/checkout/checkout.page.html
+++ b/src/app/pages/checkout/checkout.page.html
@@ -1,5 +1,11 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="end">
+      <ion-button (click)="dismiss()">
+        <ion-icon slot="end" name="close-circle-outline"></ion-icon>
+        Cerrar
+      </ion-button>
+    </ion-buttons>
     <ion-title>Resumen</ion-title>
   </ion-toolbar>
 </ion-header>
