--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 2
+      Reservas
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,43 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
+      <ion-title size="large">Reservas</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content
+      pullingIcon="arrow-down-outline"
+      pullingText="Desliza para refrescar"
+      refreshingSpinner="circles"
+      refreshingText="Buscando Reservas...">
+    </ion-refresher-content>  
+  </ion-refresher>
+
+
+  <ion-grid >
+    <ion-row>
+      <ion-col size="12" size-xl="6" size-lg="8" offset-lg="2" offset-xl="3">
+        <ion-list>
+          <ion-list-header>
+            <ion-label>Mis Reservas</ion-label>
+            <ion-button>
+              Buscar
+              <ion-icon slot="end" name="search"></ion-icon>
+            </ion-button>
+          </ion-list-header>
+          <ion-card *ngFor="let reservation of reservations">
+            <ion-card-header>
+              <ion-card-subtitle>{{reservation.checkIn}}</ion-card-subtitle>
+              <ion-card-title>{{reservation.totalPrice | currency}}</ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+              check-out : {{reservation.checkOut}}
+            </ion-card-content>
+          </ion-card>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
 </ion-content>
